tests/good/printf/print_bool.go
package main;
import "fmt";

func main(){
	fmt.Print(true, false)
}

/*
== Expected program output ==
1 0
*/